--- a/templates/base.html
+++ b/templates/base.html
@@ -1,31 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <!-- <meta name="description" content=""> -->
+    <!-- <meta name="author" content=""> -->
+    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-    <!-- Bootstrap -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!-- Custom styles for this template -->
+    <link href="http://getbootstrap.com/examples/blog/blog.css" rel="stylesheet">
+
+    <title>{% block title %}Keep digging{% end %}</title>
+
+    <style></style>
   </head>
+
   <body>
-    <h1>Hello, world!</h1>
+    {% block navig-panel %}
+    <div class="blog-masthead">
+      <div class="container">
+        <nav class="blog-nav">
+          {% for item in ["posts", "about"] %}
+          <a class="blog-nav-item{% block active-navig-item %}{% end %}" href="{{ reverse_url(item) }}">{{ item.capitalize() }}</a>
+          {% end %}
+          <!-- <a class="blog-nav-item" href="{{ reverse_url("about") }}">About</a> -->
+        </nav>
+      </div>
+    </div>
+    {% end %}
 
-    <h2>Params</h2>
-    {{ params }}
-    <h2>end Params</h2>
+    <div class="container">
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
+      {% block main-header %}
+      <div class="blog-header">
+        <h1 class="blog-title">Keep Digging Blog</h1>
+        <p class="lead blog-description">Blog about how to keep digging.</p>
+      </div>
+      {% end %}
+
+      <div class="row">
+
+        <div class="col-sm-8 blog-main">
+
+          {% block main-content %}
+          {% end %}
+
+          {% block paginator %}
+          <nav>
+            <ul class="pager">
+              <li><a href="http://getbootstrap.com/examples/blog/#">Previous</a></li>
+              <li><a href="http://getbootstrap.com/examples/blog/#">Next</a></li>
+            </ul>
+          </nav>
+          {% end %}
+
+        </div><!-- /.blog-main -->
+
+        <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
+          <div class="sidebar-module sidebar-module-inset">
+            <h4>About</h4>
+            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+          </div>
+          <div class="sidebar-module">
+            <h4>Archives</h4>
+            <ol class="list-unstyled">
+              <li><a href="http://getbootstrap.com/examples/blog/#">March 2014</a></li>
+              <li><a href="http://getbootstrap.com/examples/blog/#">February 2014</a></li>
+              <li><a href="http://getbootstrap.com/examples/blog/#">January 2014</a></li>
+              <li><a href="http://getbootstrap.com/examples/blog/#">December 2013</a></li>
+              <li><a href="http://getbootstrap.com/examples/blog/#">November 2013</a></li>
+              <li><a href="http://getbootstrap.com/examples/blog/#">October 2013</a></li>
+              <li><a href="http://getbootstrap.com/examples/blog/#">September 2013</a></li>
+              <li><a href="http://getbootstrap.com/examples/blog/#">August 2013</a></li>
+              <li><a href="http://getbootstrap.com/examples/blog/#">July 2013</a></li>
+              <li><a href="http://getbootstrap.com/examples/blog/#">June 2013</a></li>
+              <li><a href="http://getbootstrap.com/examples/blog/#">May 2013</a></li>
+              <li><a href="http://getbootstrap.com/examples/blog/#">April 2013</a></li>
+            </ol>
+          </div>
+          <div class="sidebar-module">
+            <h4>Elsewhere</h4>
+            <ol class="list-unstyled">
+              <li><a href="http://getbootstrap.com/examples/blog/#">GitHub</a></li>
+              <li><a href="http://getbootstrap.com/examples/blog/#">Twitter</a></li>
+              <li><a href="http://getbootstrap.com/examples/blog/#">Facebook</a></li>
+            </ol>
+          </div>
+        </div><!-- /.blog-sidebar -->
+
+      </div><!-- /.row -->
+
+    </div><!-- /.container -->
+
+    {% block footer %}
+    <footer class="blog-footer">
+      <p>Blog template built for <a href="http://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+      <p>
+        <a href="http://getbootstrap.com/examples/blog/#">Back to top</a>
+      </p>
+    </footer>
+    {% end %}
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="static/js/jquery.min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
+    <script src="static/js/docs.min.js"></script>
+
+    </div>
   </body>
 </html>
