add motor client.

--- a/templates/about.html
+++ b/templates/about.html
@@ -13,6 +13,7 @@
 
 {% block main-content %}
   <p>Any info about different people.</p>
+  <p>Author info: {{ author }}</p>
 {% end %}
 
 {% block paginator %}{% end %}
